crates/sql-orm/tests/ui/audit_fields_tuple_struct.rs
use sql_orm::prelude::*;

#[derive(AuditFields)]
struct Audit(String);

fn main() {}
